objects/sfal__Alert__c.object
<CustomObject>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfal__AdviseeRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the advisee record Case associated with the Advisee Contact. Value must match the selected Advisee Contact.</description>
        <label>Advisee Record</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Contact associated with the advisee record Case doesn&apos;t match the selected advisee Contact.</errorMessage>
            <filterItems>
                <field>$Source.sfal__Advisee__c</field>
                <operation>equals</operation>
                <valueField>Case.ContactId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Alerts</relationshipLabel>
        <relationshipName>Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfal__Advisee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the advisee Contact that the Alert is related to.</description>
        <label>Advisee Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Alerts</relationshipLabel>
        <relationshipName>Alerts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfal__AssignUsingRules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Alert can be assigned using assignment rules.</description>
        <label>Assign Using Active Assignment Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfal__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Case that the Alert is related to. Cannot specify the advisee record Case.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Alert (Case)</relationshipLabel>
        <relationshipName>AlertsCase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfal__Comments__c</fullName>
        <description>Comments about the Alert.</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sfal__CourseConnection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If specified, must equal the Course Connection associated with the Advisee Contact. If Program Enrollment is specified, Course Connection must be null. Only one or the other of these fields can specify a value.</description>
        <label>Course Connection</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Contact associated with the Course Connection doesn&apos;t match the selected advisee Contact.</errorMessage>
            <filterItems>
                <field>$Source.sfal__Advisee__c</field>
                <operation>equals</operation>
                <valueField>hed__Course_Enrollment__c.hed__Contact__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>hed__Course_Enrollment__c</referenceTo>
        <relationshipLabel>Alerts</relationshipLabel>
        <relationshipName>Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfal__IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Alert is open or closed.</description>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfal__Priority__c</fullName>
        <description>Priority of the Alert.</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>sfal__Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfal__ProgramEnrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If specified, must equal the Program Enrollment associated with the Advisee Contact. If Course Connection is specified, Program Enrollment must be null. Only one or the other of these fields can specify a value.</description>
        <label>Program Enrollment</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Contact associated with the Program Enrollment doesn&apos;t match the selected advisee Contact.</errorMessage>
            <filterItems>
                <field>$Source.sfal__Advisee__c</field>
                <operation>equals</operation>
                <valueField>hed__Program_Enrollment__c.hed__Contact__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipLabel>Alerts</relationshipLabel>
        <relationshipName>Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfal__Reason__c</fullName>
        <description>Reason for the Alert.</description>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Academic Integrity</fullName>
                </value>
                <value>
                    <fullName>Attendance Concern</fullName>
                </value>
                <value>
                    <fullName>Course Withdraw</fullName>
                </value>
                <value>
                    <fullName>Failure Concern</fullName>
                </value>
                <value>
                    <fullName>General Health</fullName>
                </value>
                <value>
                    <fullName>Grade Concern</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Intend to Leave</fullName>
                </value>
                <value>
                    <fullName>Major Change</fullName>
                </value>
                <value>
                    <fullName>Missing/Late Application</fullName>
                </value>
                <value>
                    <fullName>Missing/Late Assignment</fullName>
                </value>
                <value>
                    <fullName>Other (Describe in Comments)</fullName>
                </value>
                <value>
                    <fullName>Participation Concern</fullName>
                </value>
                <value>
                    <fullName>Preparedness Concern</fullName>
                </value>
                <value>
                    <fullName>Qualification Not Met</fullName>
                </value>
                <value>
                    <fullName>Recognition</fullName>
                </value>
                <value>
                    <fullName>Room Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfal__RelatedTo__c</fullName>
        <description>Displays the hyperlink to either a related Program Enrollment record (if Program Enrollment is specified) or a related Course Connection record (if Course Connection is specified).</description>
        <formula>IF(NOT(ISBLANK(sfal__CourseConnection__c)),
    HYPERLINK(&apos;/&apos; &amp; sfal__CourseConnection__c,
    sfal__CourseConnection__r.Name),
    IF(NOT(ISBLANK(sfal__ProgramEnrollment__c)),
        HYPERLINK(&quot;/&quot; &amp; sfal__ProgramEnrollment__c,
        sfal__ProgramEnrollment__r.Name),
        &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfal__Status__c</fullName>
        <description>Status of the Alert.</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Acknowledged: In Progress</fullName>
                </value>
                <value>
                    <fullName>Acknowledged: Redirected</fullName>
                </value>
                <value>
                    <fullName>Closed: Action Taken</fullName>
                </value>
                <value>
                    <fullName>Closed: No Action Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Alert</label>
    <listViews>
        <fullName>sfal__All</fullName>
        <columns>NAME</columns>
        <columns>sfal__Advisee__c</columns>
        <columns>sfal__AdviseeRecord__c</columns>
        <columns>sfal__Reason__c</columns>
        <columns>sfal__Status__c</columns>
        <columns>sfal__RelatedTo__c</columns>
        <columns>sfal__Case__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AL-{0000}</displayFormat>
        <label>Alert #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <recordTypes>
        <fullName>Academic</fullName>
        <active>true</active>
        <label>Academic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Career</fullName>
        <active>true</active>
        <label>Career</label>
    </recordTypes>
    <recordTypes>
        <fullName>Financial</fullName>
        <active>true</active>
        <label>Financial</label>
    </recordTypes>
    <recordTypes>
        <fullName>Financial_Aid</fullName>
        <active>true</active>
        <label>Financial Aid</label>
    </recordTypes>
    <recordTypes>
        <fullName>Health</fullName>
        <active>true</active>
        <label>Health</label>
    </recordTypes>
    <recordTypes>
        <fullName>Housing</fullName>
        <active>true</active>
        <label>Housing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Registration</fullName>
        <active>true</active>
        <label>Registration</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>sfal__Advisor_Link_Triggers__c</fullName>
        <label>Advisor Link Triggers</label>
    </sharingReasons>
</CustomObject>